Update to make it consistent with fmm

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import fmm\n",
+    "from mapmatcher import MapMatcher\n",
     "from ipyleaflet import *"
    ]
   },
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = fmm.MapMatcher(\"fmm_web_config.xml\")"
+    "model = MapMatcher(\"stmatch_config.json\")"
    ]
   },
   {
@@ -38,7 +38,7 @@
     "from shapely.wkt import dumps, loads\n",
     "from shapely.geometry import mapping\n",
     "original_geom = mapping(loads(wkt))\n",
-    "matched_geom = mapping(loads(result.mgeom))"
+    "matched_geom = mapping(loads(result.mgeom.export_wkt()))"
    ]
   },
   {
@@ -49,12 +49,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37692bc87cb44734a0e2a4e5b273d873",
+       "model_id": "8f0240e54caa4d759508612362550a51",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "TWFwKGJhc2VtYXA9eyd1cmwnOiAnaHR0cHM6Ly97c30udGlsZS5vcGVuc3RyZWV0bWFwLm9yZy97en0ve3h9L3t5fS5wbmcnLCAnYXR0cmlidXRpb24nOiAnTWFwIGRhdGEgKGMpIDxhIGhyZWbigKY=\n"
+       "TWFwKGNlbnRlcj1bNTkuMzM0NTkxLCAxOC4wNjMyNF0sIGNvbnRyb2xzPShab29tQ29udHJvbChvcHRpb25zPVt1J3Bvc2l0aW9uJywgdSd6b29tX2luX3RleHQnLCB1J3pvb21faW5fdGl0bGXigKY=\n"
       ]
      },
      "metadata": {},
@@ -65,7 +65,7 @@
     "original_geo_json = GeoJSON(data=original_geom, style = {'color': 'green', 'opacity':0.8, 'weight':5, 'dashArray':'20,20'})\n",
     "m = Map(center=(59.334591, 18.063240), zoom=12, basemap=basemaps.OpenStreetMap.Mapnik)\n",
     "m.add_layer(original_geo_json)\n",
-    "matched_geo_json = GeoJSON(data=matched_geom, style = {'color': 'red', 'opacity':0.8, 'weight':4})\n",
+    "matched_geo_json = GeoJSON(data=matched_geom, style = {'color': 'red', 'opacity':0.5, 'weight':4})\n",
     "m.add_layer(matched_geo_json)\n",
     "m.layout.height = '500px'\n",
     "m"
@@ -95,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
